MDEV-30659 Server crash on EXPLAIN SELECT/SELECT on table with engine Aria for LooseScan Strategy

The issue was that Loose_scan_opt::save_to_position() did not take
into account records_out from best_access_path()